--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/profile.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,17 +59,25 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+     - family: TitleFont
+       fonts:
+         - asset: assets/fonts/ArchivoNarrow-Regular.ttf
+           weight: 400
+         - asset: assets/fonts/ArchivoNarrow-Medium.ttf
+           weight: 500
+         - asset: assets/fonts/ArchivoNarrow-BoldItalic.ttf
+           weight: 700
+         - asset: assets/fonts/ArchivoNarrow-SemiBold.ttf
+           weight: 600
+     - family: BodyFont
+       fonts:
+         - asset: assets/fonts/Teko-Bold.ttf
+           weight: 400
+         - asset: assets/fonts/Teko-Medium.ttf
+           weight: 500
+         - asset: assets/fonts/Teko-Regular.ttf
+           weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
